build/log/idf_py_stdout_output_66816
Command: ninja all
[1/9] Performing build step for 'bootloader'
[1/1] cd /home/andrea/projects/Software/Wifi/build/bootloader && /home/andrea/.espressif/tools/python/v6.0/venv/bin/python /home/andrea/.espressif/v6.0/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/andrea/projects/Software/Wifi/build/bootloader/bootloader.bin
Bootloader binary size 0x6610 bytes. 0x9f0 bytes (9%) free.
[2/9] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/active_scanning.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/active_scanning.c.obj 
/home/andrea/.espressif/tools/xtensa-esp-elf/esp-15.2.0_20251204/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v6.0\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/andrea/projects/Software/Wifi/build/config -I/home/andrea/projects/Software/Wifi/main -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_libc/platform_include -I/home/andrea/.espressif/v6.0/esp-idf/components/freertos/config/include -I/home/andrea/.espressif/v6.0/esp-idf/components/freertos/config/include/freertos -I/home/andrea/.espressif/v6.0/esp-idf/components/freertos/config/xtensa/include -I/home/andrea/.espressif/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/andrea/.espressif/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/andrea/.espressif/v6.0/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/andrea/.espressif/v6.0/esp-idf/components/freertos/esp_additions/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hw_support/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hw_support/include/soc -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hw_support/ldo/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hw_support/debug_probe/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hw_support/etm/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hw_support/power_supply/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hw_support/modem/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hw_support/port/esp32/. -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hw_support/port/esp32/include -I/home/andrea/.espressif/v6.0/esp-idf/components/heap/include -I/home/andrea/.espressif/v6.0/esp-idf/components/heap/tlsf -I/home/andrea/.espressif/v6.0/esp-idf/components/log/include -I/home/andrea/.espressif/v6.0/esp-idf/components/soc/include -I/home/andrea/.espressif/v6.0/esp-idf/components/soc/esp32 -I/home/andrea/.espressif/v6.0/esp-idf/components/soc/esp32/include -I/home/andrea/.espressif/v6.0/esp-idf/components/soc/esp32/register -I/home/andrea/.espressif/v6.0/esp-idf/components/hal/platform_port/include -I/home/andrea/.espressif/v6.0/esp-idf/components/hal/esp32/include -I/home/andrea/.espressif/v6.0/esp-idf/components/hal/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_rom/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_rom/esp32/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_rom/esp32 -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_common/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_system/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_system/port/soc -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_system/port/include/private -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_stdio/include -I/home/andrea/.espressif/v6.0/esp-idf/components/xtensa/esp32/include -I/home/andrea/.espressif/v6.0/esp-idf/components/xtensa/include -I/home/andrea/.espressif/v6.0/esp-idf/components/xtensa/deprecated_include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hal_gpio/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hal_gpio/esp32/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hal_usb/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hal_pmu/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hal_pmu/esp32/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hal_ana_conv/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hal_ana_conv/esp32/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hal_dma/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hal_i2s/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_hal_i2s/esp32/include -I/home/andrea/.espressif/v6.0/esp-idf/components/lwip/include -I/home/andrea/.espressif/v6.0/esp-idf/components/lwip/include/apps -I/home/andrea/.espressif/v6.0/esp-idf/components/lwip/lwip/src/include -I/home/andrea/.espressif/v6.0/esp-idf/components/lwip/port/include -I/home/andrea/.espressif/v6.0/esp-idf/components/lwip/port/freertos/include -I/home/andrea/.espressif/v6.0/esp-idf/components/lwip/port/esp32xx/include -I/home/andrea/.espressif/v6.0/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/andrea/.espressif/v6.0/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_wifi/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_wifi/include/local -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_wifi/wifi_apps/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_event/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_phy/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_phy/esp32/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_netif/include -I/home/andrea/.espressif/v6.0/esp-idf/components/nvs_flash/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_partition/include -I/home/andrea/.espressif/v6.0/esp-idf/components/esp_blockdev/include @"/home/andrea/projects/Software/Wifi/build/toolchain/cflags" -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/andrea/projects/Software/Wifi=. -fmacro-prefix-map=/home/andrea/.espressif/v6.0/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu23 -Wno-old-style-declaration -fzero-init-padding-bits=all -fno-malloc-dce -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/active_scanning.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/active_scanning.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/active_scanning.c.obj -c /home/andrea/projects/Software/Wifi/main/active_scanning.c
/home/andrea/projects/Software/Wifi/main/active_scanning.c: In function 'process_packet':
/home/andrea/projects/Software/Wifi/main/active_scanning.c:82:28: error: initialization of 'mac_header_t *' from incompatible pointer type 'uint8_t *' {aka 'unsigned char *'} [-Wincompatible-pointer-types]
   82 |     mac_header_t* header = wifi_packet->payload;
      |                            ^~~~~~~~~~~
/home/andrea/projects/Software/Wifi/main/active_scanning.c:84:31: error: invalid operands to binary == (have 'frame_control_t' and 'int')
   84 |     if (header->frame_control == 0x50)
      |         ~~~~~~~~~~~~~~~~~~~~~ ^~
      |               |
      |               frame_control_t
/home/andrea/projects/Software/Wifi/main/active_scanning.c: In function 'app_main':
/home/andrea/projects/Software/Wifi/main/active_scanning.c:134:5: error: too few arguments to function 'send_probe_request'; expected 1, have 0
  134 |     send_probe_request();
      |     ^~~~~~~~~~~~~~~~~~
/home/andrea/projects/Software/Wifi/main/active_scanning.c:10:5: note: declared here
   10 | int send_probe_request(const char* ssid){
      |     ^~~~~~~~~~~~~~~~~~
[3/9] No install step for 'bootloader'
ninja: build stopped: subcommand failed.
